# ontology-driven-agent

./: .coverage  .dockerignore  .env.example  .gitignore  CLAUDE.md  DESIGN_V33.md  DESIGN_V34.md  Dockerfile  README.md  REVIEW_REQUEST.md  docker-compose.yml  pyproject.toml  test_search.py  test_verify.py  test_verify_full.py
.claude/rules/: architecture.md  neo4j.md  python.md  testing.md
.hermes/plans/: 2026-06-27_phase1-entry-point-detection.md  2026-06-27_phase2-business-entities.md  2026-06-27_phase3-cross-service.md  bugfix-3-shapes.md  day0-schema-and-env.md  day1-javaparser-entities.md  day2-javaparser-relations.md  day3-builder-multilang.md  day4-javaparser-tests.md  fix-fstring-service-name.md  phase-4a-precision-fixes.md  phase-5-constraint-framework-v2.md  phase-5-constraint-framework.md  task1.md
.ontoagent/: butler_audit.db  butler_skills.db
docs/: VALIDATION_REPORT.md  blog-7-materials.md  build-pipeline-analysis.md  doc-processing-analysis.md  fastmcp-research.md
docs/design/: CODE_TO_BUSINESS_TRACEABILITY_V2.md  DESIGN_V3.md  DESIGN_V34.md  DESIGN_V4_ONTOLOGY_CONSTRAINT.md  DESIGN_V5_ARCHITECTURE_REALIGNMENT.md  MULTI_DOMAIN_VALIDATION_REPORT.md  RENAME_TASK.md
docs/manuals/: blog-restructure-plan.md  manual-rewrite-plan.md  manual1_quickstart.md  manual2_troubleshooting.md  manual3_source.md  manual4_api.md  manual5_approval_guide.md
docs/plans/: 2026-05-07-phase0-day1.md  2026-05-07-phase0-day3-parser-v2.md  2026-05-07-phase0-day3-parser.md  2026-05-07-phase0-day4-chroma-store-v2.md  2026-05-07-phase0-day4-chroma-store.md  2026-05-07-phase0-day5-cli-builder.md  2026-05-07-phase0-day6-concept-aligner.md  2026-05-07-phase1-day7-change-detector.md  2026-05-07-phase1-day8-impact-propagator.md  2026-05-07-phase1-day9-incremental-updater.md  2026-05-08-phase1-day10-semantic-extractor.md  2026-05-08-phase1-day11-module-clustering.md  2026-05-09-logging-improvement-design.md  2026-05-09-logging-improvement-plan.md  2026-05-09-phase1-day12-mcp-server.md  2026-05-09-phase1-day13-integration-tests.md  2026-05-09-phase1-gapfix.md  2026-05-09-phase2-day2-semantic-pipeline-plan.md  2026-05-09-phase2-day2-semantic-pipeline-proposal.md  2026-05-09-phase2-day3-module-clustering-plan.md  2026-05-09-phase2-day3-module-clustering-proposal.md  2026-05-09-phase2-day4-refactor-plan.md  2026-05-09-phase2-day5-doc-intake-proposal.md  2026-05-09-phase2-day5-implementation-plan.md  2026-05-09-phase2-full-pipeline.md  2026-05-09-phase2.5-implementation-plan.md  (+60 more)
frontend/: package-lock.json  package.json  vite.config.ts
scripts/: test_zhipu_api.py
tests/: conftest.py
(+442 files in other folders)
