[project]
name = "ontoagent"
version = "0.2.0"
description = "Ontology-Driven Agent + OntoAgent: 基于本体驱动的可更新知识图谱引擎"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "neo4j>=6.2.0",
    "tree-sitter>=0.24",
    "chromadb>=1.0",
    "click>=8.1",
    "pydantic>=2.0",
    "tree-sitter-python>=0.25.0",
    "httpx>=0.28.1",
    "fastmcp>=3.2.4",
    "langgraph>=0.2,<0.3",
    "langchain-core>=0.3,<0.4",
    "langchain-ollama>=0.2,<0.3",
    "langchain-anthropic>=0.3.22",
    "langchain-openai",
    "fastapi>=0.136.1",
    "uvicorn>=0.46.0",
    "sse-starlette>=3.4.2",
    "tree-sitter-java>=0.23.5",
    "tenacity>=9.1.4",
    "pyyaml>=6.0.3",
]

[project.optional-dependencies]
dev = [
    "ruff>=0.11",
    "pytest>=8.0",
    "pytest-asyncio>=0.24",
    "pytest-cov>=6.0",
    "pyright>=1.1",
]

[project.scripts]
ontoagent = "ontoagent.api.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.ruff]
target-version = "py313"
line-length = 120
src = ["src", "tests"]

[tool.ruff.lint]
select = [
    "E",    # pycodestyle errors
    "W",    # pycodestyle warnings
    "F",    # pyflakes
    "I",    # isort
    "N",    # pep8-naming
    "UP",   # pyupgrade
    "B",    # flake8-bugbear
    "SIM",  # flake8-simplify
    "RUF",  # ruff-specific
]
ignore = [
    "E501",    # line too long (handled by formatter)
    "RUF001",  # ambiguous unicode chars in string literals (中文全角标点)
    "RUF002",  # ambiguous unicode chars in docstrings (中文全角标点)
    "RUF003",  # ambiguous unicode chars in comments
    "RUF012",  # mutable class attr (VALID_ENTITY_TYPES sets — acceptable for dataclass class vars)
    "RUF022",  # unsorted __all__ (grouped by category intentionally)
    "UP017",   # timezone.utc vs datetime.UTC (3.13 compat)
]

[tool.ruff.lint.isort]
known-first-party = ["ontoagent"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

[tool.pytest.ini_options]
testpaths = ["tests"]
markers = [
    "unit: 纯单元测试，无外部依赖",
    "integration: 需要 Neo4j/ChromaDB 等外部服务",
    "slow: 耗时超过1秒的测试",
]
addopts = "-v --tb=short"
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "function"
filterwarnings = [
    "ignore::DeprecationWarning",
]

[tool.pyright]
pythonVersion = "3.13"
typeCheckingMode = "basic"
include = ["src"]
exclude = ["**/__pycache__"]
reportMissingImports = true
reportMissingTypeStubs = false

[dependency-groups]
dev = [
    "pytest-asyncio>=1.3.0",
    "pytest-mock>=3.15.1",
    "ruff>=0.15.12",
]
